--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -3,15 +3,22 @@
     margin: auto;
     border: 1px solid red;
 }
+.topDiv > div{
+    border: 0px ;
+    margin: auto;
+    
+    
+}
 .post_div{
     height: 130px;
     width: 60%;
 }
 .searchboxwrapper{
     border: 1px solid blueviolet;
-    width: 50%;
+    width: 60%;
     margin: auto;
-    margin-left: 30%;
+    margin-left: 24.5%;
+    height: 80px;
 }
 .btn1{
     display: flexbox;
@@ -21,15 +28,17 @@
     width: 110px;
     font-size: 14.3px;
     font-family: sans-serif;
-    background-color: antiquewhite;
+    background-color: #E0E0E0;
+    border-radius: 5px;
+
 }
 .btn_post{
     border: 0px;
-    margin-left: 40%;
+    margin-left: 50%;
     width: 110px;
     font-size: 14.3px;
     font-family: sans-serif;
-    background-color: #4FC3F7;
+    background-color: #4267B2;
     color: white;
     border-radius: 5px;
 }
@@ -46,6 +55,11 @@
 }
 .icon1{
     width: 15px;
+}
+.topBtn{
+    border: 0px;
+    margin: 1px;
+    background-color:#E0E0E0 ;
 }
 
 
